Vitis2/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Nothing to build in platform 'FreeRTOS_P3_Update'

15:23:42 **** Incremental Build of configuration Debug for project FreeRTOS_P3_Application ****
make all 
'Building file: ../src/Project3_source.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/Project3_source.o" -ID:/PortlandState/ECE_544/Labs/project_3/Vitis2/FreeRTOS_P3_Update/export/FreeRTOS_P3_Update/sw/FreeRTOS_P3_Update/freertos10_xilinx_domain/bspinclude/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/Project3_source.d" -MT"src/Project3_source.o" -o "src/Project3_source.o" "../src/Project3_source.c"
../src/Project3_source.c: In function 'Master_thread':
../src/Project3_source.c:428:9: warning: 'return' with a value, in function returning void [-Wreturn-type]
  428 |  return -1; //Should never reach this line
      |         ^
../src/Project3_source.c:353:6: note: declared here
  353 | void Master_thread(void *p){
      |      ^~~~~~~~~~~~~
../src/Project3_source.c: In function 'display_thread':
../src/Project3_source.c:1038:9: warning: 'return' with a value, in function returning void [-Wreturn-type]
 1038 |  return -2; //Should never reach here
      |         ^
../src/Project3_source.c:972:6: note: declared here
  972 | void display_thread(void *p){
      |      ^~~~~~~~~~~~~~
../src/Project3_source.c: In function 'parameter_input_thread':
../src/Project3_source.c:1074:9: warning: 'return' with a value, in function returning void [-Wreturn-type]
 1074 |  return -3; //Should never reach here
      |         ^
../src/Project3_source.c:1042:6: note: declared here
 1042 | void parameter_input_thread(void *p){
      |      ^~~~~~~~~~~~~~~~~~~~~~
../src/Project3_source.c: In function 'PIDController_Thread':
../src/Project3_source.c:1107:20: error: 'pid_vars' {aka 'struct <anonymous>'} has no member named 'output'
 1107 |   pid_vars_PIDLocal.output = pid_vars_PIDLocal.offset  +
      |                    ^
../src/Project3_source.c:1107:47: error: 'pid_vars' {aka 'struct <anonymous>'} has no member named 'offset'
 1107 |   pid_vars_PIDLocal.output = pid_vars_PIDLocal.offset  +
      |                                               ^
../src/Project3_source.c:1111:24: error: 'pid_vars' {aka 'struct <anonymous>'} has no member named 'output'
 1111 |   if (pid_vars_PIDLocal.output < 1 )
      |                        ^
../src/Project3_source.c:1112:21: error: 'pid_vars' {aka 'struct <anonymous>'} has no member named 'output'
 1112 |    pid_vars_PIDLocal.output = 1;
      |                     ^
../src/Project3_source.c:1113:24: error: 'pid_vars' {aka 'struct <anonymous>'} has no member named 'output'
 1113 |   if (pid_vars_PIDLocal.output > 254)
      |                        ^
../src/Project3_source.c:1114:21: error: 'pid_vars' {aka 'struct <anonymous>'} has no member named 'output'
 1114 |    pid_vars_PIDLocal.output = 254;
      |                     ^
../src/Project3_source.c:1115:3: warning: implicit declaration of function 'PWM' [-Wimplicit-function-declaration]
 1115 |   PWM(pid_vars_PIDLocal.output);
      |   ^~~
../src/Project3_source.c:1115:24: error: 'pid_vars' {aka 'struct <anonymous>'} has no member named 'output'
 1115 |   PWM(pid_vars_PIDLocal.output);
      |                        ^
make: *** [src/subdir.mk:38: src/Project3_source.o] Error 1
